fixed sidebar overflow adding a scroll bar to it and added a spin animation to the logo

--- a/src/components/Logo.css
+++ b/src/components/Logo.css
@@ -8,5 +8,5 @@
 
 .logoImg {
     width: 30%;
-    
+    padding: 10px 6px 0 0;
 }
